--- a/app/src/main/res/layout/activity_chapter.xml
+++ b/app/src/main/res/layout/activity_chapter.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:fillViewport="true"
+        android:scrollbars="none"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/cvBottomItems">
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -52,13 +53,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="10dp"
+                    android:scrollbars="none"
                     android:fillViewport="true">
                     <TextView
                         android:id="@+id/tvCode"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Example Code"
-                        android:paddingBottom="5dp"
                         android:scrollHorizontally="true"
                         android:textSize="20sp"
                         />
