--- a/app/src/main/res/layout/curr_chapter.xml
+++ b/app/src/main/res/layout/curr_chapter.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:textSize="20sp"
-        android:textStyle="bold"
+        android:fontFamily="@font/milliard_semibold"
         android:letterSpacing="0.02"
         android:background="@color/primaryColor"
         android:textColor="@color/white"
