--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -41,8 +41,10 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="50dp"
+                        android:textColor="#2d3e50"
                         android:layout_marginBottom="5dp"
                         android:gravity="center"
+                        android:fontFamily="@font/milliard_semibold"
                         android:text="Continue from where you left off"
                         android:textSize="20sp"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -66,6 +68,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="10dp"
+                        android:fontFamily="@font/milliard_book"
                         android:gravity="center"
                         android:text="Your Current Chapter"
                         app:layout_constraintTop_toBottomOf="@+id/vPickUp" />
@@ -84,6 +87,8 @@
                             android:id="@+id/tvLoadingChapters"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
+                            android:fontFamily="@font/milliard_semibold"
+                            android:background="@drawable/feedback_background"
                             android:gravity="center"
                             android:text="Loading Chapters . . ." />
 
@@ -107,6 +112,7 @@
                         android:id="@+id/tvYourCurrentExample"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/milliard_book"
                         android:layout_margin="10dp"
                         android:gravity="center"
                         android:text="Your Current Example"
@@ -125,6 +131,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:gravity="center"
+                            android:fontFamily="@font/milliard_semibold"
+                            android:background="@drawable/feedback_background"
                             android:text="Loading Examples . . ." />
 
                         <androidx.recyclerview.widget.RecyclerView
@@ -190,6 +198,8 @@
                     android:id="@+id/tvTestYourLearning"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="#2d3e50"
+                    android:fontFamily="@font/milliard_semibold"
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="15dp"
                     android:layout_marginBottom="5dp"
@@ -201,6 +211,7 @@
                 <TextView
                     android:id="@+id/tvRandomExample"
                     android:layout_width="0dp"
+                    android:fontFamily="@font/milliard_book"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:layout_marginBottom="5dp"
@@ -217,6 +228,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_marginBottom="5dp"
+                    android:fontFamily="@font/milliard_semibold"
                     android:text="See Example"
                     android:textAllCaps="false"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -241,7 +253,9 @@
             android:id="@+id/tvWrite"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
             android:text="Contribute by WRITING"
+            android:fontFamily="@font/milliard_book"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/ivWrite" />
@@ -251,14 +265,14 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="6dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="15dp"
             android:background="@drawable/contribute_background"
             android:gravity="center"
-            android:textStyle="bold"
             android:letterSpacing="0.1"
-            android:text="CONTRIBUTE"
+            android:fontFamily="@font/milliard_semibold"
+            android:text="Contribute"
             android:clickable="true"
             android:textColor="@color/primaryColor"
             android:textSize="25sp"
