--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -16,7 +16,9 @@
         app:layout_constraintTop_toTopOf="parent">
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/tbHomeToolBar"
-            app:title="@string/app_name"
+            app:title="C++"
+            app:titleTextColor="#007DF9"
+            app:titleTextAppearance="@style/cpp_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:menu="@menu/home_activity_appbar"
