--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -3,15 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/white"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".SignUpActivity">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/cvSignInContainer">
+        android:fillViewport="true"
+        app:layout_constraintBottom_toTopOf="@id/cvSignInContainer"
+        app:layout_constraintTop_toTopOf="parent">
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -20,69 +22,91 @@
                 android:id="@+id/ivAppIcon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginTop="60dp"
+                android:src="@drawable/ic_app_icon"
+                app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                android:src="@drawable/ic_app_icon"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
+                android:textColor="#2d3e50"
                 android:id="@+id/tvSmallChapters"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Small and Precise Chapters"
-                android:gravity="center_vertical"
-                android:drawableLeft="@drawable/ic_star"
-                android:drawablePadding="10dp"
-                android:textSize="25sp"
-                android:layout_marginTop="60dp"
                 android:layout_marginLeft="20dp"
-                app:layout_constraintTop_toBottomOf="@+id/ivAppIcon"/>
+                android:layout_marginTop="60dp"
+                android:layout_marginRight="20dp"
+                android:drawablePadding="10dp"
+                android:fontFamily="@font/milliard_semibold"
+                android:gravity="center_vertical"
+                android:text="Small and Precise Chapters"
+                android:textSize="25sp"
+                app:layout_constraintTop_toBottomOf="@+id/ivAppIcon"
+                app:drawableLeftCompat="@drawable/ic_star" />
+
             <TextView
+                android:textColor="#2d3e50"
                 android:id="@+id/tvExamples"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Practice Examples"
-                android:drawableLeft="@drawable/ic_star"
-                android:drawablePadding="10dp"
-                android:textSize="25sp"
-                android:layout_marginTop="20dp"
                 android:layout_marginLeft="20dp"
-                app:layout_constraintTop_toBottomOf="@id/tvSmallChapters"/>
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="20dp"
+                android:drawablePadding="10dp"
+                android:fontFamily="@font/milliard_semibold"
+                android:gravity="center_vertical"
+                android:text="Practice Examples"
+                android:textSize="25sp"
+                app:layout_constraintTop_toBottomOf="@id/tvSmallChapters"
+                app:drawableLeftCompat="@drawable/ic_star" />
+
             <TextView
+                android:textColor="#2d3e50"
                 android:id="@+id/tvFavourites"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Mark Chapters as Favourites"
-                android:textSize="25sp"
-                android:drawableLeft="@drawable/ic_star"
-                android:drawablePadding="10dp"
-                android:layout_marginTop="20dp"
                 android:layout_marginLeft="20dp"
-                app:layout_constraintTop_toBottomOf="@id/tvExamples"/>
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="20dp"
+                android:drawablePadding="10dp"
+                android:fontFamily="@font/milliard_semibold"
+                android:gravity="center_vertical"
+                android:text="Mark your Favourites"
+                android:textSize="25sp"
+                app:layout_constraintTop_toBottomOf="@id/tvExamples"
+                app:drawableLeftCompat="@drawable/ic_star" />
+
             <TextView
+                android:textColor="#2d3e50"
                 android:id="@+id/tvAdFree"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="20dp"
+                android:drawablePadding="10dp"
+                android:fontFamily="@font/milliard_semibold"
+                android:gravity="center_vertical"
                 android:text="Ad Free"
                 android:textSize="25sp"
-                android:drawableLeft="@drawable/ic_star"
-                android:drawablePadding="10dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginLeft="20dp"
-                app:layout_constraintTop_toBottomOf="@id/tvFavourites"/>
+                app:layout_constraintTop_toBottomOf="@id/tvFavourites"
+                app:drawableLeftCompat="@drawable/ic_star" />
+
             <TextView
                 android:id="@+id/tvFrequentUpdate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
+                android:textColor="#2d3e50"
+                android:layout_marginRight="20dp"
+                android:drawablePadding="10dp"
+                android:fontFamily="@font/milliard_semibold"
+                android:gravity="center_vertical"
                 android:text="Frequent Content Update"
                 android:textSize="25sp"
-                android:drawableLeft="@drawable/ic_star"
-                android:drawablePadding="10dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginLeft="20dp"
-                app:layout_constraintTop_toBottomOf="@id/tvAdFree"/>
-
+                app:layout_constraintTop_toBottomOf="@id/tvAdFree"
+                app:drawableLeftCompat="@drawable/ic_star" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -97,49 +121,54 @@
         android:elevation="10dp"
         app:cardBackgroundColor="@android:color/transparent"
         app:layout_constraintBottom_toBottomOf="parent">
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/cvSignIn"
-                android:clickable="true"
-                android:focusable="true"
-                app:cardBackgroundColor="@color/primaryColor"
-                android:foreground="?android:attr/selectableItemBackground"
                 android:layout_width="match_parent"
                 android:layout_height="55dp"
-                android:layout_marginTop="30dp"
                 android:layout_marginLeft="25dp"
+                android:layout_marginTop="30dp"
                 android:layout_marginRight="25dp"
+                android:clickable="true"
+                android:focusable="true"
+                android:foreground="?android:attr/selectableItemBackground"
+                app:cardBackgroundColor="@color/primaryColor"
                 app:cardCornerRadius="4dp"
                 app:layout_constraintTop_toTopOf="parent">
+
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
+
                     <ImageView
-                        android:layout_marginLeft="10dp"
                         android:id="@+id/ivGoogleIcon"
                         android:layout_width="48dp"
-                        android:padding="10dp"
                         android:layout_height="48dp"
+                        android:layout_marginLeft="10dp"
+                        android:padding="10dp"
                         android:src="@drawable/ic_google__g__logo"
-                        app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintLeft_toLeftOf="parent"/>
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
                     <TextView
                         android:layout_width="0dp"
-                        android:textColor="@color/white"
                         android:layout_height="match_parent"
-                        app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
                         android:gravity="center"
                         android:letterSpacing="0.02"
-                        app:layout_constraintRight_toRightOf="parent"
+                        android:text="Continue with Google"
+                        android:textColor="@color/white"
+                        android:textSize="18sp"
+                        android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        android:text="Continue with Google"/>
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </androidx.cardview.widget.CardView>
@@ -148,22 +177,21 @@
                 android:id="@+id/tvTermsConditionsAndPrivacyPolicy"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
                 android:layout_marginLeft="25dp"
-                android:layout_marginBottom="30dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:textColorLink="@color/primaryColor"
-                android:lineSpacingExtra="5dp"
+                android:layout_marginTop="30dp"
+                android:fontFamily="@font/milliard_book"
                 android:layout_marginRight="25dp"
-                app:layout_constraintTop_toBottomOf="@id/cvSignIn"
-                android:text="By Signing In you agree to our Terms and Conditions and Privacy Policy."/>
+                android:layout_marginBottom="30dp"
+                android:lineSpacingExtra="5dp"
+                android:text="By Signing In you agree to our Terms and Conditions and Privacy Policy."
+                android:textColorLink="@color/primaryColor"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/cvSignIn" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     </androidx.cardview.widget.CardView>
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
