--- a/app/src/main/res/layout/recycler_view_item.xml
+++ b/app/src/main/res/layout/recycler_view_item.xml
@@ -31,6 +31,7 @@
                 android:id="@+id/tvIndex"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:fontFamily="@font/milliard_semibold"
                 android:textSize="24sp"
                 android:textColor="@color/primaryColor"
                 android:gravity="center"
@@ -46,7 +47,9 @@
             android:gravity="center_vertical"
             android:layout_marginLeft="20dp"
             android:hint="Title"
+            android:textColor="@color/primaryColor"
             android:textSize="18sp"
+            android:fontFamily="@font/milliard_semibold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/cvRVItem"
