--- a/app/src/main/res/menu/home_activity_appbar.xml
+++ b/app/src/main/res/menu/home_activity_appbar.xml
@@ -5,5 +5,6 @@
         android:id="@+id/miProfile"
         android:title="Profile"
         app:showAsAction="always"
+        android:iconTint="@color/icon_inactive"
         android:icon="@drawable/ic_baseline_person_outline_24" />
 </menu>
