--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -20,6 +20,7 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/tbProfileToolBar"
             app:title="Profile"
+            app:titleTextAppearance="@style/title_default"
             app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
