--- a/app/src/main/res/layout/fragment_favourites.xml
+++ b/app/src/main/res/layout/fragment_favourites.xml
@@ -3,12 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".FavouritesFragment">
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tlFavourites"
         android:layout_width="match_parent"
+        app:tabTextAppearance="@style/tab_text"
         android:layout_height="wrap_content"/>
 
     <androidx.viewpager2.widget.ViewPager2
