--- a/app/src/main/res/values/title_cpp.xml
+++ b/app/src/main/res/values/title_cpp.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="cpp_title">
-
         <item name="android:fontFamily">@font/origin_tech</item>
-        <item name="android:textSize">28sp</item>
+        <item name="android:textSize">30sp</item>
+    </style>
+    <style name="tab_text">
+        <item name="android:fontFamily">@font/milliard_semibold</item>
+        <item name="android:textSize">20sp</item>
         <item name="android:textColor">#007DF9</item>
+    </style>
+    <style name="title_default">
+        <item name="android:fontFamily">@font/milliard_semibold</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/icon_inactive</item>
     </style>
 </resources>
