--- a/app/src/main/res/layout/activity_delete_account.xml
+++ b/app/src/main/res/layout/activity_delete_account.xml
@@ -16,6 +16,7 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/tbDeleteAccount"
             app:title="Delete Account"
+            app:titleTextAppearance="@style/title_default"
             app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -29,6 +30,7 @@
             android:layout_height="wrap_content"
             android:lines="10"
             android:textColor="@color/grey_text"
+            android:fontFamily="@font/milliard_book"
             android:padding="20dp"
             android:gravity="top|left"
             app:layout_constraintTop_toBottomOf="@id/ablDeleteAccount"
@@ -44,15 +46,19 @@
         android:layout_height="wrap_content"
         android:textAllCaps="false"
         android:layout_margin="20dp"
+        android:minHeight="50dp"
+        android:fontFamily="@font/milliard_book"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etDeleteReason"
         android:text="Delete Account" />
     <Button
         android:id="@+id/bReport"
         android:layout_width="wrap_content"
-        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:layout_height="wrap_content"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        android:minHeight="50dp"
         android:textAllCaps="false"
+        android:fontFamily="@font/milliard_book"
         android:layout_margin="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etDeleteReason"
