--- a/app/src/main/res/layout/activity_update_profile.xml
+++ b/app/src/main/res/layout/activity_update_profile.xml
@@ -14,6 +14,7 @@
         app:layout_constraintTop_toTopOf="parent">
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/tbUpdateProfileToolBar"
+            app:titleTextAppearance="@style/title_default"
             app:title="Update Profile"
             app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
             android:layout_width="match_parent"
