--- a/app/src/main/res/layout/curr_chapter.xml
+++ b/app/src/main/res/layout/curr_chapter.xml
@@ -11,8 +11,8 @@
         android:textSize="20sp"
         android:fontFamily="@font/milliard_semibold"
         android:letterSpacing="0.02"
-        android:background="@color/primaryColor"
-        android:textColor="@color/white"
+        android:background="@drawable/button_background"
+        android:textColor="@color/primaryColor"
         android:gravity="center"
         android:text="Current Chapter"/>
 
