--- a/app/src/main/res/layout/activity_delete_account.xml
+++ b/app/src/main/res/layout/activity_delete_account.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/major_background"
     android:layout_height="match_parent"
+    android:background="@color/major_background"
     tools:context=".DeleteAccountActivity">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -13,56 +13,65 @@
         android:layout_height="wrap_content"
         android:elevation="4dp"
         app:layout_constraintTop_toTopOf="parent">
+
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/tbDeleteAccount"
-            app:title="Delete Account"
-            app:titleTextAppearance="@style/title_default"
-            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"/>
+            android:background="@color/white"
+            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
+            app:title="Delete Account"
+            app:titleTextAppearance="@style/title_default" />
     </com.google.android.material.appbar.AppBarLayout>
 
 
-        <EditText
-            android:id="@+id/etDeleteReason"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:lines="10"
-            android:textColor="@color/grey_text"
-            android:fontFamily="@font/milliard_book"
-            android:padding="20dp"
-            android:gravity="top|left"
-            app:layout_constraintTop_toBottomOf="@id/ablDeleteAccount"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:background="@drawable/feedback_background"
-            android:hint="You can Report Something Wrong.\n\nWe will surely solve that as early as possible.\n\nIf you have made your mind to Go, Please let us know why are you leaving." />
+    <EditText
+        android:id="@+id/etDeleteReason"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginRight="20dp"
+        android:background="@drawable/feedback_background"
+        android:fontFamily="@font/milliard_book"
+        android:gravity="top|left"
+        android:hint="You can Report Something Wrong.\n\nWe will surely solve that as early as possible.\n\nIf you have made your mind to Go, Please let us know why are you leaving."
+        android:lines="10"
+        android:padding="20dp"
+        android:textColor="@color/grey_text"
+        app:layout_constraintTop_toBottomOf="@id/ablDeleteAccount" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/bDeleteAccount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAllCaps="false"
         android:layout_margin="20dp"
-        android:minHeight="50dp"
+        android:background="@drawable/button_background_filled"
         android:fontFamily="@font/milliard_book"
+        android:minHeight="40dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:text="Delete Account"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="16sp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etDeleteReason"
-        android:text="Delete Account" />
-    <Button
+        app:layout_constraintTop_toBottomOf="@+id/etDeleteReason" />
+
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/bReport"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-        android:minHeight="50dp"
-        android:textAllCaps="false"
-        android:fontFamily="@font/milliard_book"
         android:layout_margin="20dp"
+        android:background="@drawable/button_background"
+        android:fontFamily="@font/milliard_book"
+        android:minHeight="40dp"
+        android:text="Report"
+        android:textAllCaps="false"
+        android:textColor="@color/primaryColor"
+        android:textSize="16sp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etDeleteReason"
-        android:text="Report" />
+        app:layout_constraintTop_toBottomOf="@+id/etDeleteReason" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
