--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -28,28 +28,22 @@
                 app:titleTextAppearance="@style/title_default" />
         </com.google.android.material.appbar.AppBarLayout>
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cvUserDetails"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="20dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:foreground="?android:attr/selectableItemBackground"
-            app:cardCornerRadius="5dp"
-            app:layout_constraintTop_toBottomOf="@id/ablProfileScreenAppBar">
+
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/clUserDetails"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:clickable="true"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:background="@drawable/button_background"
+                app:layout_constraintTop_toBottomOf="@id/ablProfileScreenAppBar">
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/cvProfilePicture"
                     android:layout_width="60dp"
                     android:layout_height="60dp"
-                    android:layout_marginLeft="10dp"
+                    android:layout_marginLeft="15dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
                     android:elevation="0dp"
@@ -72,6 +66,7 @@
                     android:layout_marginTop="20dp"
                     android:fontFamily="@font/milliard_semibold"
                     android:text="Name"
+                    android:layout_marginRight="15dp"
                     android:textColor="#2d3e50"
                     android:textSize="22sp"
                     app:layout_constraintLeft_toRightOf="@+id/cvProfilePicture"
@@ -95,7 +90,6 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-        </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/tvAbout"
@@ -106,7 +100,7 @@
             android:fontFamily="@font/milliard_semibold"
             android:text="About"
             android:textSize="16sp"
-            app:layout_constraintTop_toBottomOf="@+id/cvUserDetails" />
+            app:layout_constraintTop_toBottomOf="@+id/clUserDetails" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cvAbout"
@@ -118,6 +112,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
 
                 <TextView
                     android:id="@+id/tvTermsConditions"
@@ -261,7 +256,6 @@
                     android:text="About Us"
                     android:textColor="#2d3e50"
                     app:layout_constraintTop_toBottomOf="@id/vVersion" />
-
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
 
