--- a/app/src/main/res/drawable/ic_code_example.xml
+++ b/app/src/main/res/drawable/ic_code_example.xml
@@ -14,7 +14,7 @@
           android:endX="23.4372"
           android:type="linear">
         <item android:offset="0" android:color="#FF1245C6"/>
-        <item android:offset="1" android:color="#FF9909B7"/>
+        <item android:offset="1" android:color="#8bc4ff"/>
       </gradient>
     </aapt:attr>
   </path>
