--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="#f2f6f7"
     android:layout_height="match_parent"
     tools:context=".HomeFragment">
 
@@ -17,16 +18,18 @@
             android:layout_marginTop="20dp"
             app:layout_constraintTop_toTopOf="parent">
 
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/cvChapterCard"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
+                app:cardElevation="10dp"
                 android:layout_marginTop="50dp"
                 android:layout_marginRight="25dp"
                 android:layout_marginBottom="4dp"
                 android:elevation="5dp"
-                app:cardCornerRadius="5dp"
+                app:cardCornerRadius="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
@@ -41,11 +44,11 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="50dp"
-                        android:textColor="#2d3e50"
                         android:layout_marginBottom="5dp"
-                        android:gravity="center"
                         android:fontFamily="@font/milliard_semibold"
+                        android:gravity="center"
                         android:text="Continue from where you left off"
+                        android:textColor="#2d3e50"
                         android:textSize="20sp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -56,11 +59,10 @@
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:layout_marginLeft="10dp"
+                        android:layout_marginTop="10dp"
                         android:layout_marginRight="10dp"
                         android:background="@color/grey_text_background"
-                        android:layout_marginTop="10dp"
-                        app:layout_constraintTop_toBottomOf="@+id/tvPickUp"
-                        />
+                        app:layout_constraintTop_toBottomOf="@+id/tvPickUp" />
 
 
                     <TextView
@@ -70,8 +72,8 @@
                         android:layout_margin="10dp"
                         android:fontFamily="@font/milliard_book"
                         android:gravity="center"
-                        android:textColor="@color/primaryColor"
                         android:text="Your Current Chapter"
+                        android:textColor="@color/primaryColor"
                         app:layout_constraintTop_toBottomOf="@+id/vPickUp" />
 
                     <androidx.constraintlayout.widget.ConstraintLayout
@@ -88,8 +90,8 @@
                             android:id="@+id/tvLoadingChapters"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:fontFamily="@font/milliard_semibold"
                             android:background="@drawable/feedback_background"
+                            android:fontFamily="@font/milliard_semibold"
                             android:gravity="center"
                             android:text="Loading Chapters . . ." />
 
@@ -98,26 +100,26 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
+
                     <View
                         android:id="@+id/vCurrChapter"
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:layout_marginLeft="10dp"
+                        android:layout_marginTop="10dp"
                         android:layout_marginRight="10dp"
                         android:background="@color/grey_text_background"
-                        android:layout_marginTop="10dp"
-                        app:layout_constraintTop_toBottomOf="@+id/clCurrChapter"
-                        />
+                        app:layout_constraintTop_toBottomOf="@+id/clCurrChapter" />
 
                     <TextView
                         android:id="@+id/tvYourCurrentExample"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/primaryColor"
-                        android:fontFamily="@font/milliard_book"
                         android:layout_margin="10dp"
+                        android:fontFamily="@font/milliard_book"
                         android:gravity="center"
                         android:text="Your Current Example"
+                        android:textColor="@color/primaryColor"
                         app:layout_constraintTop_toBottomOf="@id/vCurrChapter" />
 
                     <androidx.constraintlayout.widget.ConstraintLayout
@@ -132,9 +134,9 @@
                             android:id="@+id/tvLoadingExamples"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:gravity="center"
-                            android:fontFamily="@font/milliard_semibold"
                             android:background="@drawable/feedback_background"
+                            android:fontFamily="@font/milliard_semibold"
+                            android:gravity="center"
                             android:text="Loading Examples . . ." />
 
                         <androidx.recyclerview.widget.RecyclerView
@@ -147,11 +149,12 @@
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
-
             <androidx.cardview.widget.CardView
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginTop="4dp"
+                android:elevation="10dp"
+                app:cardElevation="10dp"
                 app:cardCornerRadius="50dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -161,8 +164,11 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@drawable/ic_icons8_bookmark" />
+                    android:padding="20dp"
+                    android:src="@drawable/ic_bookmark" />
             </androidx.cardview.widget.CardView>
+
+
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -172,74 +178,70 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="25dp"
-            android:elevation="5dp"
-            app:cardCornerRadius="5dp"
+            app:cardElevation="10dp"
+            app:cardCornerRadius="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/clContainer">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:padding="10dp"
+                android:layout_height="wrap_content">
 
                 <ImageView
-                    android:id="@+id/cvExampleImage"
+                    android:id="@+id/ivslash"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginTop="15dp"
+                    android:gravity="center"
+                    android:layout_marginLeft="10dp"
                     android:src="@drawable/ic_code_example"
-                    app:cardCornerRadius="24dp"
+                    app:layout_constraintBottom_toTopOf="@id/bToRandomExample"
                     app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
-
-
-                </ImageView>
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/tvTestYourLearning"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="#2d3e50"
-                    android:fontFamily="@font/milliard_semibold"
                     android:layout_marginLeft="20dp"
-                    android:layout_marginTop="15dp"
                     android:layout_marginBottom="5dp"
+                    android:layout_marginTop="5dp"
+                    android:fontFamily="@font/milliard_semibold"
                     android:text="Test Your Learning"
+                    android:textColor="#2d3e50"
                     android:textSize="20sp"
-                    app:layout_constraintLeft_toRightOf="@+id/cvExampleImage"
+                    app:layout_constraintLeft_toRightOf="@+id/ivslash"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/tvRandomExample"
                     android:layout_width="0dp"
-                    android:fontFamily="@font/milliard_book"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:layout_marginBottom="5dp"
+                    android:fontFamily="@font/milliard_book"
                     android:gravity="center_vertical"
                     android:text="Try a random example"
-                    app:layout_constraintLeft_toRightOf="@+id/cvExampleImage"
+                    app:layout_constraintLeft_toRightOf="@+id/ivslash"
                     app:layout_constraintTop_toBottomOf="@+id/tvTestYourLearning" />
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/bToRandomExample"
                     android:layout_width="0dp"
                     android:layout_height="50dp"
-                    android:textSize="20sp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginBottom="11dp"
-                    android:textColor="@color/primaryColor"
                     android:background="@drawable/button_background"
                     android:fontFamily="@font/milliard_semibold"
                     android:text="See Example"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:layout_marginTop="15dp"
                     android:textAllCaps="false"
+                    app:layout_constraintTop_toBottomOf="@id/tvRandomExample"
+                    android:textColor="@color/primaryColor"
+                    android:textSize="20sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    android:layout_marginTop="10dp"
-                    app:layout_constraintTop_toBottomOf="@id/tvRandomExample" />
+                    app:layout_constraintRight_toRightOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
 
@@ -257,8 +259,8 @@
             android:id="@+id/tvWrite"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Contribute by WRITING"
             android:fontFamily="@font/milliard_book"
+            android:text="Contribute by WRITING"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/ivWrite" />
@@ -270,13 +272,14 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="6dp"
             android:layout_marginRight="20dp"
+            android:foreground="?android:attr/selectableItemBackground"
             android:layout_marginBottom="15dp"
             android:background="@drawable/contribute_background"
+            android:clickable="true"
+            android:fontFamily="@font/milliard_semibold"
             android:gravity="center"
             android:letterSpacing="0.1"
-            android:fontFamily="@font/milliard_semibold"
             android:text="Contribute"
-            android:clickable="true"
             android:textColor="@color/primaryColor"
             android:textSize="25sp"
             app:layout_constraintBottom_toBottomOf="parent"
