--- a/app/src/main/res/layout/activity_delete_account.xml
+++ b/app/src/main/res/layout/activity_delete_account.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/major_background"
+    android:background="#f2f6f7"
     tools:context=".DeleteAccountActivity">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -30,12 +30,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="40dp"
         android:layout_marginRight="20dp"
-        android:background="@drawable/feedback_background"
+        android:background="@drawable/white_corner_background"
         android:fontFamily="@font/milliard_book"
         android:gravity="top|left"
-        android:hint="You can Report Something Wrong.\n\nWe will surely solve that as early as possible.\n\nIf you have made your mind to Go, Please let us know why are you leaving."
+        android:hint="You can Report Something Wrong.\n\nWe will surely solve that as early as possible.\n\nIf you have made your mind to go,\nplease let us know why are you leaving."
         android:lines="10"
         android:padding="20dp"
         android:textColor="@color/grey_text"
@@ -45,7 +45,8 @@
         android:id="@+id/bDeleteAccount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginRight="20dp"
         android:background="@drawable/button_background_filled"
         android:fontFamily="@font/milliard_book"
         android:minHeight="40dp"
@@ -62,7 +63,8 @@
         android:id="@+id/bReport"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginLeft="20dp"
         android:background="@drawable/button_background"
         android:fontFamily="@font/milliard_book"
         android:minHeight="40dp"
