--- a/app/src/main/res/layout/activity_example.xml
+++ b/app/src/main/res/layout/activity_example.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/chapter_background"
+    android:background="#f2f6f7"
     tools:context=".ExampleActivity">
 
     <ScrollView
@@ -51,7 +51,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="10dp"
-                android:background="@drawable/feedback_background"
+                android:background="@drawable/white_corner_background"
                 android:layout_marginRight="20dp"
                 app:layout_constraintTop_toBottomOf="@id/tvExampleText">
                 <HorizontalScrollView
@@ -64,7 +64,7 @@
                         android:id="@+id/tvCode"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Example Code"
+                        android:hint="Chapter Code"
                         android:fontFamily="@font/consolas"
                         android:scrollHorizontally="true"
                         android:textSize="20sp"
