--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -24,11 +24,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
-                app:cardElevation="10dp"
+                app:cardElevation="0dp"
                 android:layout_marginTop="50dp"
                 android:layout_marginRight="25dp"
-                android:layout_marginBottom="4dp"
-                android:elevation="5dp"
+                android:layout_marginBottom="20dp"
+                android:elevation="0dp"
+                android:outlineAmbientShadowColor="@color/primaryColor"
                 app:cardCornerRadius="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -153,8 +154,8 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginTop="4dp"
-                android:elevation="10dp"
-                app:cardElevation="10dp"
+                android:elevation="0dp"
+                app:cardElevation="0dp"
                 app:cardCornerRadius="50dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -178,7 +179,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="25dp"
-            app:cardElevation="10dp"
+            app:cardElevation="0dp"
             app:cardCornerRadius="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
