--- a/app/src/main/res/layout/activity_example.xml
+++ b/app/src/main/res/layout/activity_example.xml
@@ -39,12 +39,13 @@
                 android:layout_marginTop="35dp"
                 android:fontFamily="@font/milliard_book"
                 android:lineSpacingExtra="12dp"
-                android:text="Example text is loading."
+                android:hint="Example text is loading."
                 android:textColor="@color/grey_text"
                 android:textSize="20sp"
                 app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
 
             <LinearLayout
+                android:id="@+id/llCodeContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="25dp"
@@ -69,6 +70,20 @@
                 </HorizontalScrollView>
 
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/tvExplanation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="25dp"
+                android:layout_marginTop="35dp"
+                android:fontFamily="@font/milliard_book"
+                android:hint="Explanation Text is loading."
+                android:lineSpacingExtra="12dp"
+                android:textColor="@color/grey_text"
+                android:textSize="20sp"
+                app:layout_constraintTop_toBottomOf="@id/llCodeContainer"/>
+
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
