--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -166,8 +166,8 @@
                         android:layout_width="48dp"
                         android:layout_height="48dp"
                         android:layout_marginLeft="10dp"
-                        android:padding="10dp"
-                        android:src="@drawable/ic_google__g__logo"
+                        android:padding="5dp"
+                        android:src="@drawable/ic_google"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
