--- a/app/src/main/res/layout/activity_chapter.xml
+++ b/app/src/main/res/layout/activity_chapter.xml
@@ -36,6 +36,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="25dp"
+                android:justificationMode="inter_word"
                 android:layout_marginTop="35dp"
                 android:fontFamily="@font/milliard_book"
                 android:hint="Chapter Text is loading."
@@ -75,9 +76,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="25dp"
-                android:layout_marginTop="35dp"
+                android:justificationMode="inter_word"
                 android:fontFamily="@font/milliard_book"
-                android:hint="Explanation Text is loading."
                 android:lineSpacingExtra="12dp"
                 android:textColor="@color/grey_text"
                 android:textSize="20sp"
