--- a/app/src/main/res/layout/activity_example.xml
+++ b/app/src/main/res/layout/activity_example.xml
@@ -12,12 +12,12 @@
         android:layout_height="0dp"
         android:fillViewport="true"
         android:scrollbars="none"
-        android:paddingBottom="20dp"
         app:layout_constraintBottom_toTopOf="@id/cvBottomItems"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
+            android:paddingBottom="20dp"
             android:layout_height="match_parent">
 
             <TextView
@@ -37,6 +37,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="25dp"
                 android:layout_marginTop="35dp"
+                android:justificationMode="inter_word"
                 android:fontFamily="@font/milliard_book"
                 android:lineSpacingExtra="12dp"
                 android:hint="Example text is loading."
@@ -76,9 +77,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="25dp"
-                android:layout_marginTop="35dp"
+                android:justificationMode="inter_word"
                 android:fontFamily="@font/milliard_book"
-                android:hint="Explanation Text is loading."
                 android:lineSpacingExtra="12dp"
                 android:textColor="@color/grey_text"
                 android:textSize="20sp"
