--- a/app/src/main/res/layout/activity_chapter.xml
+++ b/app/src/main/res/layout/activity_chapter.xml
@@ -49,7 +49,8 @@
                 android:id="@+id/llCodeContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="25dp"
+                android:layout_marginRight="25dp"
+                android:layout_marginLeft="25dp"
                 android:background="@drawable/white_corner_background"
                 app:layout_constraintTop_toBottomOf="@id/tvChapterText">
 
@@ -64,7 +65,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/consolas"
-                        android:hint="Chapter Code"
                         android:justificationMode="inter_word"
                         android:scrollHorizontally="true"
                         android:textSize="20sp" />
@@ -75,7 +75,8 @@
                 android:id="@+id/tvExplanation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="25dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
                 android:justificationMode="inter_word"
                 android:fontFamily="@font/milliard_book"
                 android:lineSpacingExtra="12dp"
